# poke-fighting-rust

./: .gitignore  Cargo.toml  README.md  example-config.json  image.py
.github/workflows/: rust.yml
src/: args.rs  battle.rs  color_fight.rs  grid.rs  lib.rs  main.rs  pokemon.rs  real_pokemons.rs  rps.rs  street_fighter.rs  types.rs
