[package]
name = "poke-fighting-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.4.0"
once_cell = "1.17.0"
nannou = "0.18.1"
nannou_egui = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }

[profile.dev]
opt-level = 3
